--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   },
   "main": "cjs",
   "dependencies": {
-    "esm": "^3.2.11"
+    "esm": "^3.2.11",
+    "lodash": "^4.17.11"
   },
   "devDependencies": {
     "@sripberger/eslint-config": "^1.0.3",
