--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "repository": "github:sripberger/topo-strict",
   "scripts": {
     "lint": "eslint .",
+    "lintf": "eslint . --fix",
     "unit": "mocha -r esm test/setup.js test/unit",
     "integration": "mocha -r esm test/setup.js test/integration",
     "test": "npm run lint && npm run unit && npm run integration",
